Change footer license text

--- a/_includes/layout/base/footer-license.html
+++ b/_includes/layout/base/footer-license.html
@@ -3,4 +3,4 @@ This file is licensed under the MIT License (MIT) available on
 http://opensource.org/licenses/MIT.
 {% endcomment %}
 
-<div class="footerlicense">© Bitcoin Project 2009-{{ site.time | date: '%Y' }} {% translate footer layout %}</div>
+<div class="footerlicense">© Bitcoin Cash Project 2009-{{ site.time | date: '%Y' }} {% translate footer layout %}</div>
