Change some oranges to green in screen.scss

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -632,12 +632,12 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     font-size:115%;
     color:#fff;
     border:1px solid #d57700;
-    background-color:#ee9209;
-    background-image:-o-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:-moz-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:-webkit-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:-ms-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:linear-gradient(bottom, #e28700 14%, #ee9209 70%);
+    background-color:#22cc76;
+    background-image:-o-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-moz-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-webkit-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-ms-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:linear-gradient(bottom, #e28700 14%, #22cc76 70%);
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
     border-radius:3px;
@@ -651,7 +651,7 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
 }
 .start h2 span{
     font-size:200%;
-    color:#ee9209;
+    color:#22cc76;
 }
 .start div div div{
     display:block;
@@ -935,7 +935,7 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     border-top:1px solid #e0e0e0;
 }
 .develdocdisclaimer div{
-    border:2px dashed #ee9209;
+    border:2px dashed #22cc76;
     background:#fff8ea;
     padding:10px;
     line-height:1.5em;
@@ -948,7 +948,7 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     display:block;
     padding:1px 8px 0 8px;
     color:#fff;
-    background-color:#ee9209;
+    background-color:#22cc76;
     position:absolute;
     top:-14px;
     right:-14px;
@@ -963,7 +963,7 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
 .develdocdisclaimerclose:visited:hover,
 .develdocdisclaimerclose:link:hover,
 .develdocdisclaimerclose:active:hover{
-    border:2px solid #ee9209;
+    border:2px solid #22cc76;
     color:#fff;
 }
 .glossary_term {
@@ -1743,12 +1743,12 @@ h2 .rssicon{
     font-size:115%;
     color:#fff;
     border:1px solid #d57700;
-    background-color:#ee9209;
-    background-image:-o-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:-moz-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:-webkit-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:-ms-linear-gradient(bottom, #e28700 14%, #ee9209 70%);
-    background-image:linear-gradient(bottom, #e28700 14%, #ee9209 70%);
+    background-color:#22cc76;
+    background-image:-o-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-moz-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-webkit-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-ms-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:linear-gradient(bottom, #e28700 14%, #22cc76 70%);
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
     border-radius:3px;
