Remove additional oranges and replace with green

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -631,13 +631,13 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     padding:6px 12px;
     font-size:115%;
     color:#fff;
-    border:1px solid #d57700;
+    border:1px solid #03A554;
     background-color:#22cc76;
-    background-image:-o-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:-moz-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:-webkit-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:-ms-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-o-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:-moz-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:-webkit-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:-ms-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:linear-gradient(bottom, #03A554 14%, #22cc76 70%);
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
     border-radius:3px;
@@ -1586,7 +1586,7 @@ h2 .rssicon{
 }
 .alertstatusactive{
     font-size:130%;
-    color:#d57700;
+    color:#03A554;
     margin-bottom:30px;
 }
 .alertsactive{
@@ -1742,13 +1742,13 @@ h2 .rssicon{
     margin:15px 0 30px 0;
     font-size:115%;
     color:#fff;
-    border:1px solid #d57700;
+    border:1px solid #03A554;
     background-color:#22cc76;
-    background-image:-o-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:-moz-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:-webkit-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:-ms-linear-gradient(bottom, #e28700 14%, #22cc76 70%);
-    background-image:linear-gradient(bottom, #e28700 14%, #22cc76 70%);
+    background-image:-o-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:-moz-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:-webkit-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:-ms-linear-gradient(bottom, #03A554 14%, #22cc76 70%);
+    background-image:linear-gradient(bottom, #03A554 14%, #22cc76 70%);
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
     border-radius:3px;
