--- a/_sass/_wallets.scss
+++ b/_sass/_wallets.scss
@@ -259,11 +259,15 @@ $scores:
 
             @each $check in $checks {
                 &.check#{$check} {
-                    @if $score == good {
-                        background-image: url('/img/icons/check_#{$check}_pass.svg');
-                    } @else {
-                        background-image: url('/img/icons/check_#{$check}_#{$score}.svg');
-                    }
+		    @if $check == slp {
+
+		    } @else {
+                    	@if $score == good {
+                        	background-image: url('/img/icons/check_#{$check}_pass.svg');
+                    	} @else {
+                        	background-image: url('/img/icons/check_#{$check}_#{$score}.svg');
+                    	}
+		    }
                 }
             }
         }
