--- a/_includes/templates/index.html
+++ b/_includes/templates/index.html
@@ -17,4 +17,4 @@ http://opensource.org/licenses/MIT.
 <p class="maindesc">{% translate desc %}</p>
 <div class="mainbutton"><a href="/{{ page.lang }}/{% translate getting-started url %}"><img src="/img/icons/but_bitcoin.svg" alt="icon">{% translate getstarted layout %}</a></div>
 <div class="mainoverview">{% translate overview %}</div>
-<div class="mainoverviews"><a href="/{{ page.lang }}/{% translate bitcoin-for-individuals url %}">{% translate menu-bitcoin-for-individuals layout %}</a> <a href="/{{ page.lang }}/{% translate bitcoin-for-businesses url %}">{% translate menu-bitcoin-for-businesses layout %}</a> <a href="/{{ page.lang }}/{% translate bitcoin-for-developers url %}">{% translate menu-bitcoin-for-developers layout %}</a></div>
+<div class="mainoverviews"><a href="/{{ page.lang }}/{% translate bitcoin-for-individuals url %}">{% translate menu-bitcoin-for-individuals layout %}</a> <a href="/{{ page.lang }}/{% translate bitcoin-for-businesses url %}">{% translate menu-bitcoin-for-businesses layout %}</a> <a href="https://reference.cash">{% translate menu-bitcoin-for-developers layout %}</a></div>
