--- a/_includes/layout/base/head-menu.html
+++ b/_includes/layout/base/head-menu.html
@@ -27,7 +27,7 @@ http://opensource.org/licenses/MIT.
         page.lang == 'en' or
         page.lang == 'uk'
       %}
-      <li{% if page.id == 'developer-documentation' %} class="active"{% endif %}><a href="https://reference.cash">{% translate menu-developer-documentation layout %}</a></li>
+      <li{% if page.id == 'developer-documentation' %} class="active"{% endif %}><a href="https://bitcoinprotocol.cash/">{% translate menu-developer-documentation layout %}</a></li>
       {% endif %}
       <li{% if page.id == 'vocabulary' %} class="active"{% endif %}><a href="/{{ page.lang }}/{% translate vocabulary url %}">{% translate menu-vocabulary layout %}</a></li>
     </ul>
